--- a/components/order-details/order-details.pcss
+++ b/components/order-details/order-details.pcss
@@ -193,11 +193,12 @@
 	scrollbar-width: thin;
 
 	&::-webkit-scrollbar {
-		height: 4px;
+		height: 5px;
 	}
 
 	&::-webkit-scrollbar-track {
 		background-color: #e4e4e4;
+		border-radius: 2px;
 	}
 
 	&::-webkit-scrollbar-thumb {
