--- a/components/shop-category/shop-category.pcss
+++ b/components/shop-category/shop-category.pcss
@@ -159,3 +159,16 @@
 .shop-category-filters__filter .filter-accordeon .filter-accordeon__title {
 	display: flex;
 }
+
+.shop-category__navigation .brand-page__strategy {
+	display: flex;
+	width: 100%;
+
+	@media (--tablet) {
+		flex-direction: column;
+	}
+}
+
+.shop-category__navigation .brand-page__strategy .dropdown {
+	width: 100%;
+}
