--- a/routes/account.pcss
+++ b/routes/account.pcss
@@ -1,4 +1,4 @@
-@import url('../layouts/variables.pcss');
+@import url("../layouts/variables.pcss");
 
 .account {
 	display: flex;
@@ -9,6 +9,7 @@
 		flex-direction: row;
 		flex-wrap: wrap;
 		margin-top: 50px;
+		margin-bottom: 50px;
 	}
 }
 
