--- a/components/product-card/product-card.pcss
+++ b/components/product-card/product-card.pcss
@@ -95,7 +95,7 @@
 	}
 }
 
-.product-card__favorite:hover + .product-card__auth-warn,
+.product-card__favorite:hover+.product-card__auth-warn,
 .product-card__auth-warn:hover {
 	transform: translateY(0);
 	pointer-events: auto;
@@ -143,7 +143,7 @@
 	display: flex;
 	margin-top: 20px;
 
-	& > * + * {
+	&>*+* {
 		margin-left: 20px;
 	}
 }
@@ -161,7 +161,7 @@
 	flex-direction: column;
 	align-items: flex-start;
 
-	& > * + * {
+	&>*+* {
 		margin-top: 5px;
 	}
 
@@ -285,7 +285,7 @@
 	}
 }
 
-.product-card__link:hover ~ .product-card__title {
+.product-card__link:hover~.product-card__title {
 	color: var(--secondary);
 }
 
@@ -416,4 +416,89 @@
 
 .product-card .fa-vector {
 	z-index: 2;
+}
+
+/* // стили для новых иконок */
+
+.product-card__requirements {
+	position: relative;
+	z-index: 3;
+}
+
+.product-card__requirement {
+	position: absolute;
+	right: 0;
+	display: flex;
+	align-items: center;
+	padding: 5px;
+	max-width: 18px;
+	min-width: 18px;
+	width: 18px;
+	border-radius: 14px;
+	overflow: hidden;
+	transition: width 0.2s linear, max-width 0.2s linear;
+}
+
+.product-card__requirement--cold {
+	top: 20px;
+	background-color: #43CFFC;
+}
+
+.product-card__requirement-icon {}
+
+.product-card__requirement-icon+.product-card__requirement-descr {
+	margin-left: 5px;
+}
+
+.product-card__requirement-descr {
+	white-space: nowrap;
+	font-weight: 700;
+	line-height: 12px;
+	font-size: 0;
+	color: #FFFFFF;
+	transition: font-size 0.2s linear;
+}
+
+.product-card__requirement--recipe {
+	top: 60px;
+	max-width: 16px;
+	min-width: 16px;
+	width: 16px;
+	padding-left: 7px;
+	background-color: #EE715F;
+}
+
+.product-card__requirement:hover {
+	max-width: fit-content;
+	width: fit-content;
+}
+
+.product-card__requirement:hover .product-card__requirement-descr {
+	font-size: 10px;
+}
+
+@media (max-width: 480px) {
+	.product-card__requirement {
+		padding: 3px;
+		max-width: 16px;
+		min-width: 16px;
+		width: 16px;
+	}
+
+	.product-card__requirement--cold {
+		top: 30px;
+	}
+
+	.product-card__requirement--recipe {
+		top: 60px;
+		max-width: 14px;
+		min-width: 14px;
+		width: 14px;
+		padding-left: 5px;
+	}
+
+	.product-card__requirement:hover .product-card__requirement-descr {
+		font-size: 8px;
+	}
+
 }
