added new page "how-works"

--- a/index.pcss
+++ b/index.pcss
@@ -50,6 +50,7 @@
 @import url("./components/filter-search-checkbox/filter-search-checkbox.pcss");
 @import url("./components/filter-search-list/filter-search-list.pcss");
 @import url("./components/header-tags/header-tags.pcss");
+@import url("./components/how-works-page/how-works-page.pcss");
 @import url("./components/index-list/index-list.pcss");
 @import url("./components/instruction-use/instruction-use.pcss");
 @import url("./components/medecine-page/medecine-page.pcss");
