--- a/components/how-works-page/how-works-page.pcss
+++ b/components/how-works-page/how-works-page.pcss
@@ -26,7 +26,7 @@
 	padding: 0 10px;
 	margin-bottom: 15px;
 	border-radius: 8px;
-	background-image: url('../../storage/how-works-banner.png');
+	background-image: resolve('./how-works-banner.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: bottom;
