--- a/components/site-header/site-header.pcss
+++ b/components/site-header/site-header.pcss
@@ -172,24 +172,24 @@
 }
 
 .site-header__phone-mobile.active .site-header__mobile-body {
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		box-sizing: border-box;
-		min-width: 278px;
-		width: 100%;
-		height: 170px;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: flex-start;
-		padding-top: 5px;
-		background-color: #fff;
-		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-		border-radius: 0px 0px 8px 8px;
-		z-index: 2;
-	}
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	box-sizing: border-box;
+	min-width: 278px;
+	width: 100%;
+	height: 170px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-start;
+	padding-top: 5px;
+	background-color: #fff;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 0px 0px 8px 8px;
+	z-index: 2;
+}
 
 .site-header__mobile-header {
 	display: flex;
@@ -453,6 +453,17 @@
 	background: #FFFFFF;
 	animation: fade 0.2s linear;
 
+
+
+	@media (max-width: 767px) {
+		padding: 10px;
+
+		& .site-header__search {
+			width: 100%;
+			margin-top: 0;
+		}
+	}
+
 	& .site-header__preambule,
 	& .site-header__tags,
 	& .site-header__town-selector,
@@ -479,12 +490,12 @@
 
 @keyframes fade {
 	0% {
-			opacity: 0;
-			transform: translateY(-10%);
+		opacity: 0;
+		transform: translateY(-10%);
 	}
 
 	100% {
-			opacity: 1;
-			transform: translateY(0);
+		opacity: 1;
+		transform: translateY(0);
 	}
 }
