--- a/components/shop-terminal-modal/shop-terminal-modal.pcss
+++ b/components/shop-terminal-modal/shop-terminal-modal.pcss
@@ -71,7 +71,7 @@
 	transition: transform 0.5s ease-in-out;
 }
 
-.shop-terminal-modal__content > * {
+.shop-terminal-modal__content>* {
 	flex-shrink: 0;
 	margin: 0 5px;
 	width: calc(50% - (10px + var(--padding-base) * 2) / 2);
@@ -152,7 +152,7 @@
 	justify-content: center;
 	align-items: center;
 
-	& > * + * {
+	&>*+* {
 		margin-left: 12px;
 	}
 }
@@ -182,7 +182,7 @@
 .shop-terminal-modal__pages {
 	display: flex;
 
-	& > * + * {
+	&>*+* {
 		margin-left: 12px;
 	}
 }
@@ -202,4 +202,11 @@
 	font-size: 36px;
 	line-height: 42px;
 	color: var(--black);
+}
+
+@media (max-width: 430px) {
+	.shop-terminal-modal {
+		width: calc(100% + 40px);
+		margin-left: -20px;
+	}
 }
