added new page about-company

--- a/index.pcss
+++ b/index.pcss
@@ -104,5 +104,6 @@
 @import url("./components/form/swich-button/swich-button.pcss");
 @import url("./components/town-selector/town-selector.pcss");
 @import url("./components/y-map/y-map.pcss");
+@import url("./components/about-company/about-company.pcss");
 @import url("./routes/index.pcss");
 @import url("./routes/account.pcss");
