--- a/components/product-card/product-card.pcss
+++ b/components/product-card/product-card.pcss
@@ -7,6 +7,7 @@
 	flex-direction: column;
 	border: 1px solid #e5e5e5;
 	padding: 10px 20px;
+	padding-bottom: 0;
 	background: var(--white);
 	cursor: pointer;
 
@@ -22,12 +23,14 @@
 
 	@media (--mobile-medium) {
 		padding: 50px 20px 10px;
+		padding-bottom: 0;
 	}
 
 	@media (--tablet) {
 		border: 0;
 		border-radius: 16px;
 		padding: 50px 20px 20px;
+		padding-bottom: 0;
 		box-shadow: 0 0 20px rgba(23, 37, 0, 0.15);
 	}
 }
@@ -392,7 +395,7 @@
 
 .product-card__buttons {
 	position: relative;
-	z-index: 2;
+	z-index: 3;
 	box-sizing: border-box;
 	margin-top: 10px;
 	width: 100%;
@@ -422,7 +425,7 @@
 
 .product-card__requirements {
 	position: relative;
-	z-index: 3;
+	z-index: 2;
 }
 
 .product-card__requirement {
@@ -468,6 +471,17 @@
 	background-color: #EE715F;
 }
 
+/*
+.product-card__requirement--short {
+	top: 95px;
+	max-width: 18px;
+	min-width: 18px;
+	width: 18px;
+	background-color: #E1C533;
+}
+
+*/
+
 .product-card__requirement:hover {
 	max-width: fit-content;
 	width: fit-content;
@@ -497,8 +511,116 @@
 		padding-left: 5px;
 	}
 
+	/*
+		.product-card__requirement--short {
+		top: 86px;
+		max-width: 16px;
+		min-width: 16px;
+		width: 16px
+	}
+*/
+
 	.product-card__requirement:hover .product-card__requirement-descr {
 		font-size: 8px;
 	}
 
+}
+
+
+.product-card__reclame {
+	position: relative;
+	z-index: 4;
+	width: fit-content;
+	margin: 0 auto;
+}
+
+.product-card__reclame-main {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	padding: 4px 5px 4px 8px;
+	gap: 1px;
+	background: var(--white);
+	border-radius: 15px;
+	font-weight: 700;
+	font-size: 10px;
+	line-height: 12px;
+	color: rgba(23, 37, 0, 0.3);
+}
+
+.product-card__reclame-main svg path {
+	fill: currentColor;
+}
+
+.product-card__reclame:hover .product-card__reclame-info {
+	display: flex;
+}
+
+.product-card__reclame:hover .product-card__reclame-main {
+	color: var(--black);
+}
+
+.product-card__reclame:hover .product-card__reclame-main svg path {
+	fill: var(--black);
+}
+
+.product-card__reclame-info {
+	display: none;
+	position: absolute;
+	top: 10px;
+	left: -90%;
+	flex-direction: column;
+	align-items: flex-start;
+	width: 218px;
+	padding: 10px;
+	background-color: var(--black);
+	border-radius: 10px 0px 10px 10px;
+	animation: fade 0.3s linear;
+	text-align: left;
+	font-size: 10px;
+	line-height: 12px;
+	color: var(--white);
+	z-index: 4;
+	transform: translate(0) !important;
+}
+
+.product-card__reclame-firm {
+
+	font-weight: 700;
+}
+
+.product-card__reclame-url {
+	margin-bottom: 10px;
+	font-weight: 700;
+}
+
+.product-card__reclame-erid {
+	margin-bottom: 10px;
+	font-weight: 700;
+}
+
+.product-card__reclame-descr {
+	font-weight: 400;
+}
+
+.product-card__reclame-link {
+	font-weight: 400;
+	color: var(--secondary);
+}
+
+div[data-tippy-root] {
+	width: 320px !important;
+	text-align: left;
+}
+
+// Fade
+@keyframes fade {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
 }
