--- a/components/product-card/product-card.pcss
+++ b/components/product-card/product-card.pcss
@@ -565,25 +565,6 @@
 	fill: var(--black);
 }
 
-.product-card__reclame-info {
-	display: none;
-	position: absolute;
-	top: 10px;
-	left: -90%;
-	flex-direction: column;
-	align-items: flex-start;
-	width: 218px;
-	padding: 10px;
-	background-color: var(--black);
-	border-radius: 10px 0px 10px 10px;
-	animation: fade 0.3s linear;
-	text-align: left;
-	font-size: 10px;
-	line-height: 12px;
-	color: var(--white);
-	z-index: 4;
-	transform: translate(0) !important;
-}
 
 .product-card__reclame-firm {
 
@@ -609,10 +590,7 @@
 	color: var(--secondary);
 }
 
-div[data-tippy-root] {
-	width: 320px !important;
-	text-align: left;
-}
+
 
 // Fade
 @keyframes fade {
@@ -623,4 +601,22 @@ div[data-tippy-root] {
 	100% {
 		opacity: 1;
 	}
+}
+
+
+.tooltip {
+	position: fixed;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	max-width: 218px;
+	padding: 10px;
+	background-color: var(--black);
+	border-radius: 10px 10px 10px 10px;
+	animation: fade 0.3s linear;
+	text-align: left;
+	font-size: 10px;
+	line-height: 12px;
+	color: var(--white);
+	z-index: 10;
 }
