--- a/components/banner/banner.pcss
+++ b/components/banner/banner.pcss
@@ -1,4 +1,4 @@
-@import url('../../layouts/variables.pcss');
+@import url("../../layouts/variables.pcss");
 
 .banner {
 	position: relative;
@@ -55,14 +55,14 @@
 	color: var(--white);
 
 	&::before {
-		content: '';
+		content: "";
 		position: absolute;
 		right: 20px;
 		bottom: 20px;
 		width: 45px;
 		height: 40px;
 		z-index: 1;
-		background: resolve('./icon.svg');
+		background: resolve("./icon.svg");
 	}
 
 	& .banner__text {
@@ -215,15 +215,19 @@
 	}
 }
 
+.banner__container {
+	position: relative;
+}
+
 .banner__reclame {
 	display: none;
-
 
 	@media (--tablet) {
 		position: absolute;
 		bottom: 12px;
 		left: 18px;
 		display: block;
+		cursor: pointer;
 	}
 }
 
@@ -237,7 +241,7 @@
 		gap: 2px;
 		min-width: 66px;
 		height: 20px;
-		background-color: #F7F7F7;
+		background-color: #f7f7f7;
 		border-radius: 15px;
 		font-weight: 700;
 		font-size: 10px;
@@ -246,12 +250,18 @@
 
 		&:hover {
 			background-color: #172500;
-			color: #FFFFFF;
+			color: #ffffff;
 		}
 
 		&:hover svg path {
 			fill: rgba(255, 255, 255, 0.4);
 		}
 	}
+}
 
+
+
+.banner__reclame-main:hover .tooltip {
+	opacity: 1;
+	visibility: visible;
 }
