--- a/components/product-card/product-card.pcss
+++ b/components/product-card/product-card.pcss
@@ -582,6 +582,7 @@
 }
 
 .product-card__reclame-descr {
+	padding-bottom: 10px;
 	font-weight: 400;
 }
 
@@ -605,11 +606,10 @@
 
 
 .tooltip {
-	position: fixed;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	max-width: 218px;
+	min-width: 218px;
 	padding: 10px;
 	background-color: var(--black);
 	border-radius: 10px 10px 10px 10px;
@@ -619,4 +619,13 @@
 	line-height: 12px;
 	color: var(--white);
 	z-index: 10;
+
+	position: absolute;
+	opacity: 0;
+	visibility: hidden;
+}
+
+.product-card__reclame-main:hover .tooltip {
+	opacity: 1;
+	visibility: visible;
 }
