--- a/components/product-card/product-card.pcss
+++ b/components/product-card/product-card.pcss
@@ -6,8 +6,7 @@
 	display: flex;
 	flex-direction: column;
 	border: 1px solid #e5e5e5;
-	padding: 10px 20px;
-	padding-bottom: 0;
+	padding: 10px 20px 20px;
 	background: var(--white);
 	cursor: pointer;
 
@@ -22,15 +21,13 @@
 	}
 
 	@media (--mobile-medium) {
-		padding: 50px 20px 10px;
-		padding-bottom: 0;
+		padding: 50px 20px 20px;
 	}
 
 	@media (--tablet) {
 		border: 0;
 		border-radius: 16px;
 		padding: 50px 20px 20px;
-		padding-bottom: 0;
 		box-shadow: 0 0 20px rgba(23, 37, 0, 0.15);
 	}
 }
@@ -528,7 +525,10 @@
 
 
 .product-card__reclame {
-	position: relative;
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
 	z-index: 4;
 	width: fit-content;
 	margin: 0 auto;
