--- a/components/product-tabs/product-tabs.pcss
+++ b/components/product-tabs/product-tabs.pcss
@@ -94,10 +94,11 @@
 		top: 14px;
 		transform: rotate(180deg);
 	}
-
-	& rect,
+	& rect {
+		fill: #ffffff;
+	},
 	& path {
-		stroke: var(--light-gray);
+		stroke: #8bbd3f;
 	}
 }
 
