--- a/components/medecine-page/medecine-page.pcss
+++ b/components/medecine-page/medecine-page.pcss
@@ -1,5 +1,15 @@
 @import url('../../layouts/variables.pcss');
 
+html,
+body {
+	scroll-behavior: smooth;
+}
+
+
+.container--not-hidden {
+	overflow: visible;
+}
+
 .medecine-page {
 	margin-top: 40px;
 
@@ -37,7 +47,7 @@
 	}
 }
 
-.medecine-page__cards-container > * {
+.medecine-page__cards-container>* {
 	width: 50%;
 
 	&:nth-child(n+2) {
@@ -48,7 +58,7 @@
 		border-top-width: 0;
 	}
 
-	@media (width >= 600px) {
+	@media (width >=600px) {
 		width: 33.33333%;
 
 		&:nth-child(n+2) {
@@ -74,7 +84,7 @@
 		width: calc(33.33333% - 20px);
 	}
 
-	@media (width >= 890px) {
+	@media (width >=890px) {
 		margin: 20px;
 		width: calc(33.33333% - 40px);
 	}
@@ -97,20 +107,18 @@
 	text-align: center;
 }
 
-.medecine-page .medecine-page__content-block {
-	@media (--desktop-small) {
-		margin-top: 20px;
-	}
-}
-
 .medecine-page__menu {
-	padding: 20px;
 
-	@media (--desktop-small) {
+	@media (--tablet) {
 		position: sticky;
-		top: 0;
+		top: 150px;
 		left: 0;
 		height: fit-content;
+		flex: 0 0 240px;
+	}
+
+	@media (--desktop-small) {
+		flex: 0 0 310px;
 	}
 }
 
@@ -125,26 +133,839 @@
 .medecine-page__list {
 	display: flex;
 	flex-direction: column;
-
-	@media (--desktop-small) {
-		width: 270px;
-	}
 }
 
-.medecine-page__item {
-	&:not(:last-child) {
-		margin-bottom: 16px;
-	}
-}
+.medecine-page__item {}
 
 .medecine-page__link {
-	display: inline-block;
+	display: flex;
+	padding: 12px 5px;
+	border-bottom: 1px solid #E3E3EC;
 	font-size: 16px;
 	line-height: 19px;
 	text-decoration: none;
 	color: var(--black);
 
 	&:hover {
+		background: rgba(244, 241, 241, 0.26);
 		color: var(--secondary);
 	}
+}
+
+.medecine-page__content-block h4 {
+	margin: 24px 0 10px;
+}
+
+
+.medecine-page__info-content {
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+	margin-bottom: 50px;
+
+	@media (--tablet) {
+		flex-direction: row;
+		gap: 20px;
+	}
+
+	@media (--desktop-small) {
+		margin-bottom: 70px;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+.medecine-page__header {
+	margin-bottom: 40px;
+
+	& p {
+		font-size: 14px;
+	}
+
+	@media (--tablet) {
+		margin-bottom: 54px;
+
+		& p {
+			font-size: 16px;
+		}
+	}
+
+	@media (--desktop-small) {
+		margin-bottom: 40px;
+	}
+}
+
+.medecine-page__header-label {
+	margin-bottom: 20px;
+
+	@media (--tablet) {
+		display: flex;
+		gap: 3px;
+		margin-bottom: 30px;
+	}
+}
+
+.medecine-page__header-info {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.medecine-page__header-row {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	gap: 5px 14px;
+}
+
+.medecine-page__header-row svg {
+	min-width: 25px;
+	width: 25px;
+	height: auto;
+}
+
+.medecine-page__products {}
+
+.medecine-page__anchors-header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 1300px;
+	min-width: 1300px;
+	margin: 0 auto;
+	margin-bottom: 10px;
+
+}
+
+.medecine-page__anchors-scrollbar {
+	margin-bottom: 30px;
+	background-color: var(--white);
+	overflow-x: auto;
+	overflow-y: hidden;
+	scrollbar-color: var(--primary) #E4E4E4;
+	scrollbar-width: thin;
+
+	@media (--tablet) {
+		margin-bottom: 50px;
+	}
+
+	@media (--desktop-medium) {
+		margin-bottom: 80px;
+	}
+}
+
+.medecine-page__anchors-container.fixed~.medecine-page__products {
+	margin-top: 90px;
+	transition: all 0.5s linear;
+
+	@media (--tablet) {
+		margin-top: 110px;
+	}
+
+	@media (--desktop-medium) {
+		margin-top: 140px;
+	}
+}
+
+.medecine-page__anchors-container.fixed {
+	position: fixed;
+	top: 50px;
+	left: 0;
+	width: 100%;
+	background-color: var(--white);
+	filter: drop-shadow(0px 9px 10px rgba(0, 0, 0, 0.05));
+	animation: fade 0.2s linear;
+	z-index: 3;
+
+	@media (--tablet) {
+		top: 78px;
+	}
+
+	& .medecine-page__anchors-scrollbar {
+		margin: 0 12px;
+
+
+		@media (--mobile-medium) {
+			margin: 0 20px;
+		}
+
+		@media (--desktop-medium) {
+			margin: 0 27px;
+		}
+	}
+
+}
+
+
+.medecine-page__anchors-scrollbar::-webkit-scrollbar {
+	height: 6px;
+}
+
+.medecine-page__anchors-scrollbar::-webkit-scrollbar-track {
+	height: 6px;
+	background: #E4E4E4;
+	border-radius: 3px;
+}
+
+.medecine-page__anchors-scrollbar::-webkit-scrollbar-thumb {
+	height: 6px;
+	border-radius: 3px;
+	background: var(--primary);
+}
+
+.medecine-page__anchors-link {
+	display: flex;
+	align-items: center;
+	width: fit-content;
+	height: 50px;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 21px;
+	color: var(--half-black);
+}
+
+
+.medecine-page__anchors-link.active {
+	border-bottom: 3px solid var(--secondary);
+	color: var(--secondary);
+}
+
+.medecine-page__products-list {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+
+	@media (--tablet) {
+		gap: 10px;
+	}
+
+	@media (--desktop-small) {
+		gap: 20px;
+	}
+}
+
+.medecine-page__products {}
+
+.medecine-product {
+	display: grid;
+	grid-template-columns: 100px 1fr;
+	gap: 10px 20px;
+	padding-bottom: 20px;
+	border-bottom: 1px dashed #D8D8D8;
+
+	@media (--tablet) {
+		display: flex;
+	}
+}
+
+.medecine-product__picture {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+
+	@media (--tablet) {
+		flex: 0 1 315px;
+		align-items: center;
+		min-width: 150px;
+	}
+}
+
+.medecine-product__img {
+	max-width: 100%;
+	width: 100px;
+	height: auto;
+	padding-top: 30px;
+
+	@media (--tablet) {
+		width: 100%;
+		padding-top: 0;
+	}
+}
+
+.medecine-product__picture svg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 64px;
+
+	@media (--tablet) {
+		width: 92px;
+	}
+}
+
+.medecine-product__info {
+	@media (--tablet) {
+		flex: 0 1 400px;
+	}
+}
+
+.medecine-product__title {
+	margin-bottom: 5px;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 20px;
+	color: #333333;
+
+	@media (--tablet) {
+		font-size: 24px;
+		line-height: 35px;
+	}
+}
+
+.medecine-product__rows {
+	display: grid;
+	gap: 3px;
+
+	@media (--tablet) {
+		gap: 5px;
+	}
+}
+
+.medecine-product__row {
+	display: flex;
+	flex-direction: column;
+
+
+	@media (--mobile-medium) {
+		align-items: center;
+		justify-content: space-between;
+		flex-direction: row;
+	}
+}
+
+.medecine-product__row p {
+	text-align: left;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 16px;
+	color: #000000;
+
+	@media (--desktop-medium) {
+		width: 250px;
+		font-weight: 700;
+		font-size: 16px;
+		line-height: 21px;
+		color: var(--gray);
+	}
+}
+
+.medecine-product__row span {
+	text-align: left;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 16px;
+	color: var(--gray);
+
+	@media (--desktop-medium) {
+		width: 250px;
+		font-size: 16px;
+		line-height: 21px;
+	}
+}
+
+.medecine-product__row a {
+	text-align: left;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 16px;
+	color: var(--secondary);
+
+	@media (--desktop-medium) {
+		width: 250px;
+		font-size: 16px;
+		line-height: 21px;
+	}
+}
+
+.medecine-product__price-buy {
+	grid-column: span 2;
+	display: grid;
+	grid-template-columns: 120px 1fr;
+
+	@media (--tablet) {
+		grid-template-columns: repeat(1, 1fr);
+		margin-left: auto;
+	}
+
+	@media (--desktop-medium) {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+.medecine-product__price {
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	justify-self: flex-end;
+	padding-right: 20px;
+	text-align: right;
+
+	@media (--tablet) {
+		grid-template-columns: repeat(2, 1fr);
+		gap: 6px;
+		align-self: center;
+		margin-bottom: 9px;
+		padding-right: 0;
+		text-align: left;
+	}
+
+	@media (--desktop-medium) {
+		grid-template-columns: repeat(1, 1fr);
+		grid-row: span 2;
+		justify-self: center;
+		gap: 0;
+		margin-bottom: 0;
+	}
+}
+
+.medecine-product__price-label {
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 23px;
+	color: #000000;
+
+	@media (--tablet) {
+		grid-column: span 2;
+		justify-self: flex-end;
+	}
+
+	@media (--desktop-medium) {
+		margin-bottom: 10px;
+		grid-column: span 1;
+		justify-self: unset;
+	}
+}
+
+.medecine-product__price-old {
+	margin-top: -4px;
+	white-space: nowrap;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 26px;
+	color: #BEBEBE;
+
+	@media (--tablet) {
+		justify-self: flex-end;
+		align-self: center;
+		margin-top: 0;
+	}
+
+	@media (--desktop-medium) {
+		justify-self: unset;
+		align-self: unset;
+	}
+}
+
+.medecine-product__price-new {
+	margin-top: -10px;
+	white-space: nowrap;
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 35px;
+	color: var(--primary);
+
+	@media (--tablet) {
+		margin-top: 0;
+	}
+}
+
+.medecine-product__buying {
+	margin-bottom: 9px;
+}
+
+.medecine-product__buy-basket {
+	padding: 0;
+	height: 32px;
+	font-size: 14px;
+	line-height: 20px;
+	margin-bottom: 9px;
+
+	@media (--tablet) {
+		height: 40px;
+		font-size: 16px;
+		line-height: 24px;
+	}
+
+	@media (--desktop-small) {
+		height: 46px;
+		font-size: 18px;
+		line-height: 26px;
+	}
+}
+
+.medecine-product__buy {
+	padding: 0;
+	height: 32px;
+	white-space: nowrap;
+	font-size: 14px;
+	line-height: 20px;
+
+	@media (--tablet) {
+		height: 40px;
+		font-size: 16px;
+		line-height: 14px;
+	}
+
+	@media (--desktop-small) {
+		height: 46px;
+		font-size: 18px;
+		line-height: 26px;
+	}
+}
+
+.medecine-product__deliverys {
+	grid-column: span 2;
+	padding: 10px 0;
+
+	@media (--tablet) {
+		grid-column: span 1;
+	}
+}
+
+.medecine-product__delivery {
+	display: flex;
+	align-items: center;
+	gap: 15px;
+}
+
+.medecine-product__delivery svg {
+	width: 40px;
+	height: 40px;
+	min-width: 40px;
+}
+
+.medecine-product__delivery-info {
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 17px;
+	color: #000000;
+
+	@media (--tablet) {
+		font-size: 14px;
+		line-height: 20px;
+	}
+}
+
+.medecine-product__delivery-info b {
+	display: block;
+	font-weight: 700;
+}
+
+.medecine-product__delivery-info span {
+	color: #707070;
+}
+
+.medecine-product__pay {
+	display: flex;
+	align-items: center;
+	gap: 15px;
+}
+
+.medecine-product__pay svg {
+	width: 40px;
+	height: 40px;
+	min-width: 40px;
+}
+
+.medecine-product__price-price {
+	font-weight: 700;
+	white-space: nowrap;
+	font-size: 24px;
+	line-height: 35px;
+	color: #000000;
+
+	@media (--tablet) {
+		grid-column: span 2;
+		justify-items: flex-end;
+	}
+}
+
+.medecine-page__products-nav {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 60px 0 70px;
+}
+
+.medecine-page__nav-prev {
+	display: none;
+	height: 46px;
+	white-space: nowrap;
+	font-size: 14px;
+	line-height: 16px;
+
+	@media (--tablet) {
+		display: flex;
+		height: 56px;
+		font-size: 22px;
+		line-height: 26px;
+	}
+}
+
+.medecine-page__nav-list {
+	display: flex;
+	align-items: center;
+	gap: 5px;
+
+	@media (--tablet) {
+		gap: 10px;
+	}
+}
+
+.medecine-page__nav-item {
+	box-sizing: border-box;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 48px;
+	min-width: 48px;
+	height: 48px;
+	border-radius: 100%;
+	border: 1px solid #E4E4E4;
+	font-size: 14px;
+	line-height: 16px;
+	color: #8D9192;
+
+	@media (max-width: 359px) {
+		width: 32px;
+		min-width: 32px;
+		height: 32px;
+		font-size: 12px;
+		line-height: 14px;
+	}
+}
+
+.medecine-page__nav-item.active {
+	background-color: var(--secondary);
+	border: 1px solid var(--secondary);
+	color: var(--white);
+}
+
+.medecine-page__nav-item--end {
+	display: none;
+
+	@media (--tablet) {
+		display: flex;
+	}
+}
+
+.medecine-page__nav-dots {
+	box-sizing: border-box;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 36px;
+	height: 36px;
+	min-width: 36px;
+	font-size: 14px;
+	line-height: 16px;
+	color: #8D9192;
+
+	@media (max-width: 359px) {
+		width: 32px;
+		min-width: 32px;
+		height: 32px;
+		font-size: 12px;
+		line-height: 14px;
+	}
+}
+
+.medecine-page__nav-next {
+	height: 46px;
+	padding: 0 30px;
+	white-space: nowrap;
+	font-size: 14px;
+	line-height: 16px;
+
+	@media (max-width: 359px) {
+		height: 40px;
+		font-size: 12px;
+		line-height: 14px;
+	}
+
+	@media (--tablet) {
+		height: 56px;
+		font-size: 22px;
+		line-height: 26px;
+	}
+}
+
+
+.medecine-page__subtitle {
+	margin-bottom: 20px;
+	font-weight: 700;
+	font-size: 28px;
+	line-height: 40px;
+	color: #333333;
+
+	@media (--desktop-medium) {
+		margin-bottom: 30px;
+		font-size: 36px;
+		line-height: 52px;
+	}
+}
+
+.medecine-page__photos {
+	display: flex;
+	gap: 20px;
+	margin-bottom: 50px;
+	overflow-x: auto;
+	overflow-y: hidden;
+
+	@media (--desktop-medium) {
+		margin-bottom: 70px;
+	}
+}
+
+.medecine-page__photos::-webkit-scrollbar {
+	display: none;
+}
+
+
+
+.medecine-page__photo {
+	width: 200px;
+	height: 200px;
+	min-width: 200px;
+	background: #F8F7F8;
+
+	@media (--desktop-small) {
+		width: 252px;
+		min-width: 252px;
+		height: 253px;
+	}
+}
+
+.medecine-page__photo img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.medecine-page__photos--certificats .medecine-page__photo {
+	width: 253px;
+	min-width: 253px;
+	height: 358px;
+
+	@media (--desktop-small) {
+		width: 243px;
+		min-width: 243px;
+		height: 347px;
+	}
+}
+
+.medecine-page__photos--certificats .medecine-page__photo img {
+	object-fit: none;
+}
+
+
+
+
+.medecine-page__faq {
+	margin-bottom: 50px;
+
+	@media (--desktop-small) {
+		margin-bottom: 70px;
+	}
+}
+
+.faq-accordion {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+}
+
+.faq-accordion__item {
+	background: #F9F9F9;
+	border-radius: 4px;
+}
+
+.faq-accordion__item-content {
+	padding: 0 15px 18px;
+
+	@media (--tablet) {
+		padding: 0 40px 45px;
+	}
+
+	@media (--desktop-medium) {
+		padding: 20px 30px 30px;
+	}
+}
+
+.faq-accordion__item.faq-accordion__item-active .faq-accordion__item-content {
+	display: block;
+}
+
+
+.faq-accordion__item-trigger {
+	display: flex;
+	padding: 15px;
+	align-items: center;
+	cursor: pointer;
+
+	@media (--desktop-medium) {
+		padding: 30px;
+	}
+}
+
+.trigger__text {
+	max-width: 86%;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 20px;
+	color: #333333;
+
+	@media (--tablet) {
+		max-width: 100%;
+		font-size: 24px;
+		line-height: 35px;
+	}
+}
+
+.content__text {
+	max-width: 90%;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 19px;
+	color: var(--black);
+
+	@media (--desktop-small) {
+		max-width: 787px;
+	}
+}
+
+.trigger__img {
+	position: relative;
+	margin-left: auto;
+}
+
+.trigger__img svg {
+	transition: transform 0.2s linear;
+}
+
+.faq-accordion__item.faq-accordion__item-active .trigger__img svg {
+	transform: rotate(180deg);
+
+	& path {
+		fill: #000000;
+		fill-opacity: 1;
+	}
+
+}
+
+.faq-accordion__item-content {
+	display: none;
+	animation: fade 0.3s ease;
+}
+
+
+.content__text:first-child {
+	margin-top: 0;
 }
