fix medecine page

--- a/components/medecine-page/medecine-page.pcss
+++ b/components/medecine-page/medecine-page.pcss
@@ -255,7 +255,7 @@
 	}
 }
 
-.medecine-page__anchors-container.fixed~.medecine-page__products {
+.medecine-page__anchors-container.fixed~div {
 	margin-top: 90px;
 	transition: all 0.5s linear;
 
@@ -854,13 +854,6 @@
 		height: 347px;
 	}
 }
-
-.medecine-page__photos--certificats .medecine-page__photo img {
-	object-fit: none;
-}
-
-
-
 
 .medecine-page__faq {
 	margin-bottom: 50px;
