--- a/components/medecine-page/medecine-page.pcss
+++ b/components/medecine-page/medecine-page.pcss
@@ -255,6 +255,10 @@
 	}
 }
 
+.medecine-page__anchors-scrollbar {
+	border-bottom: 1px solid #F2F2F2;
+}
+
 .medecine-page__anchors-container.fixed~div {
 	margin-top: 90px;
 	transition: all 0.5s linear;
@@ -276,7 +280,7 @@
 	background-color: var(--white);
 	filter: drop-shadow(0px 9px 10px rgba(0, 0, 0, 0.05));
 	animation: fade 0.2s linear;
-	z-index: 3;
+	z-index: 9;
 
 	@media (--tablet) {
 		top: 78px;
@@ -297,6 +301,23 @@
 
 }
 
+.medecine-page__anchors-container.fixed .medecine-page__anchors-header {
+	margin-bottom: 0;
+}
+
+.medecine-page__anchors-container.fixed .medecine-page__anchors-link {
+	height: 46px;
+}
+
+@media (max-width: 1360px) {
+	.medecine-page__anchors-container.fixed {
+		padding-bottom: 7px;
+	}
+
+	.medecine-page__anchors-container.fixed .medecine-page__anchors-header {
+		margin-bottom: 10px;
+	}
+}
 
 .medecine-page__anchors-scrollbar::-webkit-scrollbar {
 	height: 6px;
