--- a/components/medecine-page/medecine-page.pcss
+++ b/components/medecine-page/medecine-page.pcss
@@ -722,8 +722,6 @@
 	}
 }
 
-.medecine-product__buying {}
-
 .medecine-product__buy-basket {
 	padding: 0;
 	height: 32px;
@@ -1137,15 +1135,37 @@
 	top: -4px;
 	width: 22px;
 	height: 28px;
+	display: none;
 
 	@media (--tablet) {
 		right: 0;
 		top: -4px;
 		width: 30px;
+		display: block;
 	}
 
 	@media (--desktop-medium) {
 		right: 10px;
 		top: 4px;
 	}
+}
+
+.medecine-page__favorite--mobile {
+	position: static;
+	display: block;
+	width: 24px;
+	min-width: 24px;
+	height: 24px;
+
+	@media (--tablet) {
+		display: none;
+	}
+}
+
+
+.medecine-product__buying {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	height: fit-content;
 }
