--- a/components/medecine-page/medecine-page.pcss
+++ b/components/medecine-page/medecine-page.pcss
@@ -375,7 +375,10 @@
 	left: 0;
 	width: 100%;
 	background-color: var(--white);
-	filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.05));
+	/*filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.05));*/
+	-webkit-box-shadow: 0px 12px 19px -5px rgba(34, 60, 80, 0.2);
+	-moz-box-shadow: 0px 12px 19px -5px rgba(34, 60, 80, 0.2);
+	box-shadow: 0px 12px 19px -5px rgba(34, 60, 80, 0.2);
 	animation: fade 0.2s linear;
 	z-index: 9;
 
